osmogsmproto_HEADERS = \
	gsm_23_032.h \
	gsm_03_40.h \
	gsm_03_41.h \
	gsm_04_08.h \
	gsm_04_08_gprs.h \
	gsm_04_11.h \
	gsm_04_12.h \
	gsm_04_14.h \
	gsm_04_80.h \
	gsm_08_08.h \
	gsm_08_58.h \
	gsm_09_02.h \
	gsm_12_21.h \
	gsm_23_003.h \
	gsm_23_041.h \
	gsm_25_415.h \
	gsm_29_118.h \
	gsm_44_004.h \
	gsm_44_318.h \
	gsm_48_049.h \
	gsm_48_071.h \
	gsm_49_031.h \
	ipaccess.h \
	smpp34_osmocom.h \
	$(NULL)

osmogsmprotodir = $(includedir)/osmocom/gsm/protocol
